--- a/.github/workflows/main_adople-landingpage-ui-ux.yml
+++ b/.github/workflows/main_adople-landingpage-ui-ux.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Zip artifact for deployment
         working-directory: ./ProfessionalDashboard
-        run: zip -r ../../release.zip build
+        run: zip -r ../release.zip dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
