--- a/.github/workflows/main_adople-landingpage-ui-ux.yml
+++ b/.github/workflows/main_adople-landingpage-ui-ux.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +29,6 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
       - name: Zip artifact for deployment
         working-directory: ./ProfessionalDashboard
         run: zip -r ../release.zip dist
@@ -44,8 +43,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write
-      contents: read
+      id-token: write # Required for requesting the JWT
+      contents: read  # Required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -63,18 +62,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_22A8472C6A3C4BA8A8D8D9ADAB71AC6D }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3216219C361A4989AE7CE89CFDDA3150 }}
 
-      - name: Stop App Service
-        run: az webapp stop --name Adople-landingpage-UI-UX --resource-group YOUR_RESOURCE_GROUP
-        shell: bash
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'Adople-landingpage-UI-UX'
           slot-name: 'Production'
-          package: .
-
-      - name: Start App Service
-        run: az webapp start --name Adople-landingpage-UI-UX --resource-group YOUR_RESOURCE_GROUP
-        shell: bash
+          package: . 
