--- a/.github/workflows/main_adople-landingpage-ui-ux.yml
+++ b/.github/workflows/main_adople-landingpage-ui-ux.yml
@@ -31,7 +31,8 @@ jobs:
           npm run test --if-present
       - name: Zip artifact for deployment
         working-directory: ./ProfessionalDashboard
-        run: zip -r ../release.zip dist
+        run: |
+          zip -r ../release.zip . -x "node_modules/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
